2002-10-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/sarlacc_schem.c, scripts/sarlacc_sym: Added updates from
	Egil Kvaleberg.  Thanks.

2002-09-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* gschlas/: Added new libgeda program: gEDA schematic/symbol Load and
	Save.  This program just loads the specified files and saves them in
	the current file format.  gschlas is used by gschupdate and
	gsymupdate.

	* lib/, lib/system-gschlasrc.in: Added rc file for above

	* include/: Added include directory and files for above

	* scripts/gschupdate, gsymupdate: Updated to use gschlas.

	* configure.in and others: Updated scripts to search for libgeda and
	all the required programs.

	* configure.in: Bumped version to 20020922, which is NOT a release.

2002-09-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* utils/convert_sym.c: Updated code to attach pinseq= and pinnumber=
	instead of pin#=#  

	* utils/convert_sym.c: Updated code to attach netname= instead of
	label=

	* utils/convert_sym.c: Updated "v %s" string to be 19991011 which
	is the right version for the files convert_sym spits out.  This
	should eventually be updated to the lastest version, but gschem
	will happily read in old files.

	* utils/convert_sym.c: Symbols/schematics that are outputed from
	this tool are now current to the 20020825 attribute scheme.

	* utils/gmk_sym.c: Updated code to output pinseq= and pinnumber=
	instead of pin#=#.

	* utils/gmk_sym.c: Symbols that are outputed from this tool are
	now current to the 20020825 attribute scheme.

	* utils/sarlacc_sym: Updated code to output pinseq= and pinnumber=
	instead of pin#=#.  UNTESTED, but should be okay.

2002-08-14 Chris Ellec   <chris @ gtx.seul.org >

	* utils/gmk_sym.c: Check for multiple instances of the same pin 
     	number and quit when this happens, give Fatal error messsage.

2002-07-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/gsymupdate: Added code to properly convert type= and label= 
	to pintype= and pinlabel=
