@@ -1,3 +1,9 @@
+2002-10-17 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* configure.in, scripts/Makefile.am, scripts/config.sh.in, 
+	  scripts/gschemdoc.sh: Added find documentation patch from Egil 
+	  Kvaleberg.  Thanks.
+
 2002-10-07 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* src/sarlacc_schem.c, scripts/sarlacc_sym: Added updates from
